src/styles/styles.scss
@import 'variables';

* {
  font-family: $font-fam;
}

// general
body {
  height: 100%;
  width: 100%;
  margin: 0;
  overflow-x: hidden;
  background: linear-gradient(
    45deg,
    rgb(19, 14, 92),
    rgb(0, 5, 78),
    $primary-color,
    $primary-color,
    teal
  );
}

// landing bg
.landing-bg {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  z-index: -1;
}

nav {
  background-color: rgb(246, 246, 246) !important;
  padding: 0.5vh 0 !important;
  font-family: $font-fam !important;

  img {
    margin-left: 10vh;
    width: 4rem !important;
  }

  @media screen and (max-width: 520px) {
    img {
      margin-left: 1em;
    }
    .navbar-nav {
      margin-top: 1em;
    }
    .navbar-toggler {
      margin-right: 1em;
    }
    .navbar-text {
      padding-left: 20px;
    }
    .slackLink {
      justify-content: start !important;
      a {
        padding-left: 20px;
      }
      margin-bottom: 1em;
    }
    .form-inline {
      display: none;
    }
  }

  .navbar-brand {
    font-weight: 600;
    font-size: 1.7em;
    letter-spacing: 0.8px;
    color: $primary-color !important;
    cursor: default !important;
  }

  a {
    font-size: 1.3em;
    color: $primary-color !important;
    padding-left: 20px;

    &:hover {
      color: $secondary-color !important;
      cursor: pointer;
    }

    &.active {
      color: $primary-color !important;

      &:hover {
        color: $secondary-color !important;
      }
    }
  }

  .slackLink {
    display: flex;
    justify-content: center;
    a {
      padding-top: 4px;
      padding-bottom: 0;
    }
  }

  .btn-primary {
    margin-right: 10vh;
    background-color: $primary-color !important;
    font-size: 0.9em !important;
    border-radius: 5px !important;
    border-color: $primary-color !important;

    &:hover {
      background-color: $secondary-color !important;
      border-color: $secondary-color !important;
    }
  }
}

//Slack Nav//

.slack-nav-icon {
  color: #003459;

  &:hover {
    color: #2274a5;
  }
}

// HERO
#hero {
  display: flex;
  align-items: center;
  color: $fourth-color;
  justify-content: space-around;
  margin: 10vh;
  font-size: 24px;
  right: 0;
  left: 0;
  min-height: 300px;
  height: 62vh;

  @media screen and (min-width: 421px) and (max-width: 768px) {
    h1 {
      font-size: 3em;
    }
  }
  @media screen and (max-width: 520px) {
    margin: 2em;

    h1 {
      margin-top: 1em;
      font-size: 2em;
    }
    img {
      display: none;
    }
    .one-liner {
      max-width: 100% !important;
    }
    .button-wrapper {
      flex-direction: column;
      button {
        flex-grow: 1;
        margin: 0.5em 0 !important;
      }
    }
  }

  h1 {
    font-size: 70px;
    letter-spacing: 1px;
  }

  .one-liner {
    font-size: 0.7em;
    max-width: 80%;
  }

  img {
    height: 100%;
    width: 40%;
    max-width: 600px;
    -webkit-filter: drop-shadow(5px 5px 5px #222);
    filter: drop-shadow(5px 5px 5px #222);
  }
  .button-wrapper {
    display: flex;

    button {
      border-style: none;
      border-radius: 5px;
      margin: 20px;
      color: $primary-color;
      padding: 0 10px;
      background-color: $fourth-color;

      &:first-child {
        margin-left: 0px;
      }

      a {
        font-style: none;
        color: $primary-color;
        text-decoration: none;
        padding-left: 10px;
      }

      &:hover {
        a {
          color: $secondary-color;
        }

        color: $secondary-color;
      }
    }
  }
}

// features
#features {
  background-color: rgb(246, 246, 246);
  margin-top: 20vh;
  position: relative;
  width: 100vw;
  height: 100vh;

  .svg-separator {
    display: block;
    background: 0 0;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    z-index: 9;
    -webkit-transform: translateY(-100%) translateY(2px);
    transform: translateY(-100%) translateY(2px);
    width: 100%;
  }

  .sep10 {
    transform: translateY(-100%) translateY(2px) scale(1, 1);
    transform-origin: top;
    display: block;
  }

  .carousel-wrapper {
    max-height: 100vh;
    height: 100% !important;
    width: 100% !important;

    h1 {
      font-size: 3em;
      padding-bottom: 4vh;
      text-align: center;
      letter-spacing: 0.5px;
      font-family: $font-fam;
      color: $primary-color;
      margin: 0;
    }

    .video-wrapper {
      display: flex;
      img {
        color: $primary-color !important;
        width: 56vw;
        margin-bottom: 34vh !important;
        margin-left: 22vw !important;
        -webkit-filter: drop-shadow(5px 5px 5px #222);
        filter: drop-shadow(5px 5px 5px #222);
      }
    }

    ol {
      margin-top: 0;
      margin-bottom: 0;
      padding-bottom: 14vh;
    }
  }
  a {
    width: 22vw;
  }

  .carousel-control-prev-icon {
    width: 4vw !important;
    height: 4vh !important;
    background-image: url(/assets/arrow-svg.svg);
    transform: rotate(90deg) !important;
    margin-right: 5vw;
    margin-bottom: 20vh;
  }
  .carousel-control-next-icon {
    width: 4vw !important;
    height: 4vh !important;
    background-image: url(/assets/arrow-svg.svg);
    transform: rotate(270deg) !important;
    margin-left: 5vw;
    margin-bottom: 20vh;
  }

  @media screen and (max-width: 520px) {
    h1 {
      margin: 0.5em auto !important;
    }
    height: min-content;
    .carousel-caption {
      h2 {
        font-size: 1.3em;
      }
    }
    .video-wrapper {
      display: flex;
      img {
        height: 30vw !important;
        width: 56vw !important;
      }
    }

    ol {
      margin-top: 0;
      margin-bottom: 20vh;
      padding-bottom: 14vh;
    }
    a {
      width: 22vw;
    }

    .carousel-control-prev-icon {
      width: 4vw !important;
      height: 4vh !important;
      background-image: url(/assets/arrow-svg.svg);
      transform: rotate(90deg) !important;
      margin-right: 5vw;
      margin-bottom: 32vh;
    }
    .carousel-control-next-icon {
      width: 4vw !important;
      height: 4vh !important;
      background-image: url(/assets/arrow-svg.svg);
      transform: rotate(270deg) !important;
      margin-left: 5vw;
      margin-bottom: 32vh;
    }
  }

  .carousel-caption {
    color: $primary-color;
    padding-bottom: 6vh !important;
    margin-top: 6vh;
    h2 {
      padding-top: 4vh !important;
      padding-bottom: 12vh !important;
    }
  }
  .carousel-indicators li {
    background-color: $primary-color !important;
  }
}

// ----DOWNLOAD----
#download-title {
  margin-top: 5%;

  @media screen and (max-width: 520px) {
    h1 {
      margin: 0.5em auto;
    }
    #download {
      margin: 1em auto !important;
    }
    .download-icon {
      width: 48px;
      svg {
        width: 48px;
        height: 48px;
      }
      p {
        font-size: 0.7em;
      }
    }
  }

  h1 {
    font-style: $font-fam;
    color: $fourth-color;
    text-align: center;
    font-size: 3em;
    letter-spacing: 0.5px;
  }

  #download {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10vh;
    font-size: 1.5rem;
    color: $fourth-color;
  }

  .download-icons {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: baseline;
    text-decoration: none;
    color: $fourth-color;
  }

  .download-icon {
    margin: 0 10%;
  }

  a:hover {
    opacity: 0.7;
  }
}

/* Community */
#community {
  background-color: rgb(246, 246, 246);
  padding-top: 10vh;
  padding-bottom: 10vh;
  position: relative;
  color: $primary-color;
  text-align: center;
  display: flex;
  justify-content: space-around;
  flex-direction: column;

  @media screen and (max-width: 520px) {
    padding-bottom: 1em;
    padding-top: 0;
    height: min-content;

    #community-wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
      .animated {
        animation-duration: 0s !important;
        opacity: 1 !important;
      }
      figcaption {
        padding: 1em 0;
      }
    }

    h1 {
      margin: 0.5em auto !important;
    }
    h2 {
      font-size: 20px;
    }
    h3 {
      display: none;
    }
    #line {
      display: none;
    }
  }

  #line {
    border-left: 6px solid $primary-color;
    height: inherit;
    left: 50%;
    top: 0;
  }
  h1 {
    margin-bottom: 10vh;
    font-size: 48px;
  }

  h3 {
    font-style: italic;
  }

  figure {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    margin: 0 auto 20px;
    justify-content: center;
  }

  figure:last-child {
    margin-bottom: 0;
  }

  .figure-wrapper {
    width: 50%;
  }

  figcaption {
    padding: 10vh;
  }
}
#community-wrapper {
  display: flex;
  justify-content: space-around;
}

#figure-wrapper2 {
  margin-top: 25px;
  h2 {
    margin-bottom: 3%;
  }
}

.github-icon {
  color: $primary-color;

  &:hover {
    color: $secondary-color;
  }
}

/* Team */
.team-wrapper {
  @media screen and (max-width: 520px) {
    h1 {
      margin: 0.5em auto !important;
    }
    .team-container {
      display: flex;
      flex-direction: column;
      .teamProfile {
        h4 {
          padding-top: 0.5em;
          font-size: 1.3em;
        }
        .team-links {
          justify-content: space-around !important;
          svg {
            width: 28px;
          }
        }
      }
    }
  }
  h1 {
    color: $fourth-color;
    display: flex;
    justify-content: center;
    font-size: 2.5em;
    margin-bottom: 5%;
    margin-top: 5%;
    font-size: 3em;
  }

  .team-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    align-content: center;
    margin-bottom: 5%;

    .teamProfile {
      color: $fourth-color;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      .team-icon {
        border-radius: 60%;
        border: 10px solid transparent;
        backdrop-filter: blur(5px);
        background-color: rgba(255, 255, 255, 0.3);
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;

        .actual-pic {
          display: none;
        }

        .surround:hover [class='avatar'] {
          display: none;
        }
        .surround:hover [class='actual-pic'] {
          display: block;
        }

        img {
          border-radius: 50%;
          height: 10em;
          width: 10em;
          z-index: 2;
        }

        h4 {
          text-align: center;
        }

        &:hover {
          background-color: $fourth-color;
        }
      }

      .team-links {
        padding: 1%;
        position: relative;
        z-index: 1;
        display: flex;
        justify-content: space-between;
        width: 100px;
        svg:hover {
          color: $secondary-color;
        }
      }
    }
  }
}

